# harp.device.treadmill-driver

./: .gitignore  .gitmodules  README.md  device.yml
firmware/: CMakeLists.txt
firmware/docs/: register_map.csv
firmware/inc/: analog_load_cell.h  config.h  continuous_adc_polling.h  current_driver.h  pio_ads70x9.h  pio_encoder.h  pio_ltc264x.h
firmware/src/: analog_load_cell.cpp  continuous_adc_polling.c  current_driver.cpp  main.cpp  pio_ads70x9.cpp  pio_ads70x9.pio  pio_encoder.cpp  pio_ltc264x.cpp  pio_ltc264x.pio
hardware/board/: encoder_5_to_3v3.kicad_sch  harp_core_rp2040_w_isolated_usb.kicad_sch  harp_treadmill.kicad_pcb  harp_treadmill.kicad_pro  harp_treadmill.kicad_sch  power_supplies.kicad_sch  torque_load_driving.kicad_sch  torque_load_sensing.kicad_sch
hardware/enclosure/cads/solidworks/: 1455L801_lids.SLDPRT  1455L801_lids_and_trim.SLDPRT
hardware/enclosure/cads/step/: 1455L801_lid_data_side.STEP  1455L801_lid_io_side.STEP
hardware/enclosure/exports/dxfs/: 1455L801_lid_data_side.DXF  1455L801_lid_io_side.DXF
hardware/enclosure/exports/stls/: 1455L801_trim.STL
notes/: design_notes.md
software/bonsai/: device.yml
software/bonsai/AllenNeuralDynamics.Treadmill/: device.yml
software/bonsai/AllenNeuralDynamics.Treadmill/Generators/: Generators.csproj
software/bonsai/AllenNeuralDynamics.Treadmill/Interface/AllenNeuralDynamics.Treadmill/: AllenNeuralDynamics.Treadmill.csproj  AsyncDevice.Generated.cs  Device.Generated.cs
software/bonsai/AllenNeuralDynamics.Treadmill/Interface/AllenNeuralDynamics.Treadmill/Properties/: AssemblyInfo.cs
software/bonsai/Generators/: Generators.csproj
software/bonsai/Interface/: AllenNeuralDynamics.Treadmill.sln
software/bonsai/Interface/AllenNeuralDynamics.Treadmill/: AllenNeuralDynamics.Treadmill.csproj  AsyncDevice.Generated.cs  Device.Generated.cs
software/pyharp/: read_aggregate_sensors.py  read_sensors.py  read_torque_sensor.py  tare_sensors.py  test_torque_limit.py  wait_for_sensor_data.py  write_brake.py
software/scripts/brake_calibration/: README.md  calibrate_brake.py  calibration_fit.ipynb  requirements.txt  test_rig_treadmill.csv
